import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar

plugins {
    id "architectury-plugin" version "3.5-SNAPSHOT"
    id "dev.architectury.loom-no-remap" version "1.14-SNAPSHOT" apply false
    id "com.gradleup.shadow" version "9.+" apply false
}

architectury {
    minecraft = rootProject.minecraft_version
}

subprojects {
    apply plugin: "dev.architectury.loom-no-remap"
    apply plugin: "com.gradleup.shadow"

    dependencies {
        minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
    }

	tasks.withType(ShadowJar).configureEach {
		zip64 = true
	}
}

allprojects {
    apply plugin: "java"
    apply plugin: "architectury-plugin"

    base {
        archivesName = rootProject.archives_base_name
    }
    version = "${rootProject.mod_version}+mc${rootProject.minecraft_version}"
    group = rootProject.maven_group

	tasks.withType(JavaCompile).configureEach {
		options.encoding = "UTF-8"
		options.release = 25
	}

	java {
        withSourcesJar()
    }
}
